WebApp_DataBase_Setup/mongo-express-deployment.yaml
apiVersion : apps/v1
kind : Deployment 
metadata : 
  name : mongo-express
  labels : 
    app : mongo-express
spec : 
  replicas : 1
  selector : 
    matchLabels : 
      app : mongo-express
  template : 
    metadata :
      labels : 
        app : mongo-express
    spec : 
      containers :
      - name : mongo-express
        image : mongo-express 
        ports : 
        - containerPort : 8081
        env : 
        - name : ME_CONFIG_MONGODB_ADMINUSERNAME
          valueFrom :
            secretKeyRef : 
              name : mongodb-secret
              key : mongo-root-username
        - name : ME_CONFIG_MONGODB_ADMINPASSWORD
          valueFrom :
            secretKeyRef : 
              name : mongodb-secret
              key : mongo-root-password
        - name : ME_CONFIG_MONGODB_SERVER
          valueFrom :
            configMapKeyRef : 
              name : mongodb-configmap
              key : database_url
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081 # where the container port is listening 
      nodePort: 30000 # port where the external ip adress will be open
